--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,41 @@
 	box-sizing: border-box;
 	margin: 0;
 }
+
+.itemlist {
+	margin: 6vh auto;
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	overflow-y: scroll;
+}
+
+.itemlist li {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	border: 0.1em solid black;
+	border-radius: 1em;
+	width: 80%;
+	height: 4em;
+	margin: 2em;
+	padding: 0 2em;
+}
+.itemlist li:hover {
+	box-shadow: 0em 0em 1em rgba(137, 213, 96, 0.863);
+}
+
+li button {
+	background-color: rgba(137, 213, 96, 0.863);
+	padding: 0.5em;
+	border-radius: 0.5em;
+}
+
+li button:hover {
+	box-shadow: 0em 0em 1em rgba(137, 213, 96, 0.863);
+}
+li button:active {
+	box-shadow: 0em 0em 1em rgba(213, 96, 96, 0.863);
+	background-color: rgba(213, 96, 96, 0.863);
+}
