--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -5,14 +5,18 @@
 	position: fixed;
 	bottom: 0;
 	width: 100%;
-	height: 6vh;
+	height: 8vh;
+	padding-top: 1em;
 }
 
 a {
 	text-decoration: none;
 	color: rgb(25, 31, 36);
+	height: 4vh;
 	font-size: 2vh;
 	padding: 1em;
 	border: 0.1em solid rgb(25, 31, 36);
 	border-radius: 0.5em;
+	display: flex;
+	align-items: center;
 }
