--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -15,3 +15,18 @@ h2 {
 	position: fixed;
 	top: 0;
 }
+
+article {
+	width: 25vw;
+	height: 25vh;
+	margin: 10em auto;
+	display: flex;
+	flex-direction: column;
+	align-items: left;
+	gap: 2em;
+	justify-content: center;
+	padding-left: 4em 2em;
+	border: 0.2em solid black;
+	border-radius: 1em;
+	box-shadow: 1em 1em 1em black;
+}
